# MeetTracker

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.ollama_server  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  supervisord.conf
alembic/: env.py
alembic/versions/: 0bf8a73be3cc_database.py  1fae149e2e48_initial_migration.py  383654b7214d_initial.py  4765d8590e07_initial.py  51eb8059256d_initial.py  6f4126e10781_new_db.py  f3862a3dc939_initial.py
alembic_migrations/: env.py
alembic_migrations/versions/: 8e3b982cf802_initial.py  c2906e455b56_database_creation.py
my-app/: Dockerfile  package-lock.json  package.json
my-app/public/: index.html  manifest.json
my-app/src/: App.css  App.jsx  api.js  index.css  routing.js
my-app/src/components/Header/: Header.jsx  Header.module.css
my-app/src/components/Message/: Message.jsx  Message.module.css
my-app/src/components/ProtectedRoute/: ProtectedRoute.jsx
my-app/src/components/Validator/: Validator.jsx
my-app/src/components/auth/: Auth.jsx  Auth.module.css
my-app/src/pages/AdminPanelPage/: AdminPanelPage.jsx  AdminPanelPage.module.css
my-app/src/pages/AuthentificationPage/: AuthentificationPage.jsx  AuthentificationPage.module.css
my-app/src/pages/MainPage/: MainPage.jsx  MainPage.module.css
my-app/src/utils/: message.js
requirements/: pyproject.toml
src/: .dockerignore  Dockerfile  api.js  config.py  database.py  database_service.py  db_models.py  file_service.py  main.py  pyproject.toml
src/admin/: admin_service.py  routers.py
src/auth/: auth.py  auth_service.py  custom_oauth2.py  exceptions.py  manager.py  models.py  routers.py  schemas.py  status_codes.py  user_service.py  utils.py
src/components/Header/: Header.jsx  Header.module.css
src/components/auth/: Auth.module.css
src/files/: test.json
src/notifications/: gmail_sender.py  telegram.py
src/pages/AdminPanelPage/: AdminPanelPage.module.css
src/pages/AuthentificationPage/: AuthentificationPage.module.css
src/s3bucket/: client.py
src/user/: allowed_content.py  routers.py
src/whisper/: Dockerfile  check.py  database_service.py  file_service.py  routers.py  server.py  summary.py  whisper.py  whisper_service.py
(+28 files in other folders)
