[tool.poetry]
name = "meet-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
SQLAlchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
alembic = "^1.13.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
