[tool.poetry]
name = "meet-tracker v0"
version = "0.1.0"
description = ""
authors = ["kulickk <lilrik1328@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
fastapi-users = "^13.0.0"
alembic = "^1.13.3"
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
